<resources>
    <string name="app_name">HostelWorldChallenge</string>
    <string name="property_preview">Property preview</string>
    <string name="star">star</string>
    <string name="dorms_from">Dorms from</string>
    <string name="privates_from">Privates from</string>
    <string name="free_wifi">free wifi</string>
    <string name="free_breakfast">Free breakfast</string>
    <string name="featured_property">Featured property</string>
    <string name="free_cancellation">Free cancellation</string>
    <string name="rating_text">%1$s (%2$d)</string>
    <string name="km_from_city_centre">%1$s - %2$skm from city centre</string>
    <string name="no_dorm_availability">No Dorm Availability</string>
    <string name="no_private_availability">No Private Availability</string>
    <string name="lowest_price">%1$s%2$s</string>
    <string name="showing_properties">Showing %1$d properties.</string>
    <string name="try_again">Try again</string>
    <string name="back">back</string>
    <string name="location_pin">location pin</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="value_for_money">Value for money</string>
    <string name="security">Security</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="staff">Staff</string>
    <string name="location">Location</string>
    <string name="facilities">Facilities</string>
    <string name="from">From</string>
    <string name="choose_room">Choose Room</string>
    <string name="number_of_reviews">%1$d reviews</string>
    <string name="triple_lowest_price">%1$s%2$s | %3$s%4$s | %5$s%6$s</string>
</resources>